syntax = "proto3";

package learn;

import "common.proto";

service Learn {
  rpc RecordFeedback(FeedbackRecord) returns (common.Empty);
  rpc QueryFeedback(QueryRequest) returns (FeedbackResponse);
  rpc GetExperience(ExperienceRequest) returns (ExperienceResponse);
  rpc UpdateExperience(ExperienceUpdate) returns (common.Empty);
}

// Feedback collection

message FeedbackRecord {
  string conversation_id = 1;
  string message_id = 2;
  string trace_id = 3;
  Signal signal = 4;
  int64 timestamp = 5;
}

enum Signal {
  UNSPECIFIED = 0;
  POSITIVE = 1;
  NEGATIVE = 2;
}

message QueryRequest {
  message Filter {
    optional string conversation_id = 1;
    optional int64 after_timestamp = 2;
  }
  optional Filter filter = 1;
  optional int32 limit = 2;
}

message FeedbackResponse {
  repeated FeedbackRecord records = 1;
}

// Learned experience

message ExperienceRequest {
  repeated float query_embedding = 1;
  repeated string candidate_tools = 2;
}

message ExperienceResponse {
  repeated ToolExperience tool_experience = 1;
  repeated FewShotExample examples = 2;
  repeated LearnedRule rules = 3;
}

message ExperienceUpdate {
  repeated ToolExperience tool_experience = 1;
  repeated FewShotExample examples = 2;
  repeated LearnedRule rules = 3;
  int64 updated_at = 4;
}

message ToolExperience {
  string tool_name = 1;
  string refined_applicability = 2;
  float success_rate = 3;
  repeated string failure_patterns = 4;
}

message FewShotExample {
  string query_pattern = 1;
  string tool_name = 2;
  string parameters_json = 3;
  string outcome_summary = 4;
  repeated float embedding = 5;
}

message LearnedRule {
  string condition = 1;
  string action = 2;
  float confidence = 3;
  int32 supporting_examples = 4;
}
